# INTERFACE-QT

./: CMakeLists.txt  README.md  calculatrice.cpp  calculatrice.h  controler.cpp  controller.h  main.cpp  model.cpp  model.h
